[package]
name = "tilecover"
version = "0.4.1"
authors = ["ingalls <ingalls@protonmail.com>"]
description = "Generate the minimum number of tiles to cover a geometry"

homepage = "https://github.com/ingalls/tilecover"
repository = "https://github.com/ingalls/tilecover"

readme = "README.md"

categories = ["algorithms"]
license = "MIT"

[dependencies]
geo = "0.7.4"
