[package]
name = "tilecover"
version = "1.1.1"
authors = ["ingalls <ingalls@protonmail.com>"]
description = "Generate the minimum number of tiles to cover a geometry"

homepage = "https://github.com/ingalls/tilecover-rs"
repository = "https://github.com/ingalls/tilecover-rs"

readme = "README.md"

categories = ["algorithms"]
license = "MIT"

[dependencies]
geo = "0.12.0"
